--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!--CONTACTME-->
             <section class="contact-me">
                 <h1>Contact Me</h1>
-                <h2>Contact me on Discord</h2>
+                <h2>Follow me on</h2>
             
                 <div class="box">
                     <article class="discord">
