--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img id="avatar" alt="avatar" class="profile" src="images/pp.jpg">
                 <div class="information">
                     <h1>$lil Wolf</h1>
-                    <h3>Fronted Developer</h3>
+                    <h3>Frontend Developer</h3>
                     <article class="p3">
                         Hey! I'm lil Wolf, Full frontend developer,<br>
                         I likes to build things with code.<br>
