--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section id="whatıdo" class="whatıdo">
                 <h1>What I Do</h1>
                 <div class="box">
-                    <h3>Fronted Developer</h3>
+                    <h3>Frontend Developer</h3>
                     <p>
                         I am developing myself to make the best website for clients, now
                         I am a full frontend developer, I am planning to start backend business in the near future.
