--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#whatıdo">What I Do</a></li>
                     <li><a href="#aboutme">About Me</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact-me">Contact</a></li>
                     <li><a href="#projects">Projects</a></li>
                 </ul>
             </section>
