--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head lang="utf8">
         <title>$lil Wolf</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link href="index.css" type="text/css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
@@ -28,7 +29,7 @@
                 <img id="avatar" alt="avatar" class="profile" src="images/pp.jpg">
                 <div class="information">
                     <h1>$lil Wolf</h1>
-                    <h3>Fronted Developer</h3>
+                    <h3>Frontend Developer</h3>
                     <article class="p3">
                         Hey! I'm lil Wolf, Full frontend developer,<br>
                         I likes to build things with code.<br>
@@ -41,7 +42,7 @@
             <section id="whatıdo" class="whatıdo">
                 <h1>What I Do</h1>
                 <div class="box">
-                    <h3>Fronted Developer</h3>
+                    <h3>Frontend Developer</h3>
                     <p>
                         I am developing myself to make the best website for clients, now
                         I am a full frontend developer, I am planning to start backend business in the near future.
@@ -103,8 +104,8 @@
             <footer class="footer">
                 <div class="footer-about">
                     <a target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a target="_blank" href=""><i class="fa-brands fa-discord"></i></a>
-                    <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i></a>
+                        <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i></a>
+                        <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <a class="copyright">© lil Wolf 2022</a>
             </footer>
