--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>      
         <main class="container">
             <!--NAVBAR-->
-            <section style= "color: rgba(0, 0, 0, 0.5);">
+            <section>
                 <nav class="fill">
                   <ul>
                     <li><a href="">Home</a></li>
