--- a/index.html
+++ b/index.html
@@ -30,11 +30,9 @@
                 <div class="information">
                     <h1>$lil Wolf</h1>
                     <h3>Frontend Developer</h3>
-                    <article class="p3">
-                        Hey! I'm lil Wolf, Full frontend developer,<br>
-                        I likes to build things with code.<br>
-                        I am in love with programming as a whole.
-                    </article>
+                    <p class="intro">
+                        Hey there! I'm lil Wolf, a frontend wizard passionate about crafting stunning digital experiences with the power of code and design.
+                    </p> 
                 </div>
             </section>
 
@@ -44,9 +42,7 @@
                 <div class="box">
                     <h3>Frontend Developer</h3>
                     <p>
-                        I am developing myself to make the best website for clients, now
-                        I am a full frontend developer, I am planning to start backend business in the near future.
-                        Until then, I will practice more and improve myself more.
+                        Hello! I'm lil Wolf, a passionate Frontend Developer with 2 years of experience. I specialize in developing modern and impactful web projects using HTML, CSS, and JavaScript. I prioritize aesthetics and user experience, aiming to provide users with engaging and user-friendly experiences. With my creative thinking skills and strong technical knowledge, I offer solutions to meet my clients' needs and achieve their goals. I constantly strive to improve myself, staying up-to-date with new technologies and design trends. I'm here to deliver unique and impressive projects.
                     </p>
                 </div>
             </section>
@@ -55,7 +51,7 @@
             <section id="aboutme" class="aboutme">
                 <h1>About Me</h1>
                 <p>
-                    Hey 👋🏿, my name is @Anonymous. I am a Fronted Developer, Web Developer and Designer. I have more than 2+ years of programming experience and I am happy to code.
+                    Hey! 👋🏿 My name is @Anonymous. I'm a Frontend Developer, Web Developer, and Designer. With over 2+ years of programming experience, I find joy in coding and creating innovative web solutions. I'm passionate about designing visually appealing and user-friendly websites.
                 </p>
             </section>
             
