--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <!--HOME-->
             <section class="home">
-                <img id="avatar" alt="avatar" class="profile" src="images/pp.jpg">
+                <img id="avatar" alt="avatar" class="profile" src="https://lanyard.rest/535117705854844940.jpg">
                 <div class="information">
                     <h1>$lil Wolf</h1>
                     <h3>Frontend Developer</h3>
@@ -51,7 +51,7 @@
             <section id="aboutme" class="aboutme">
                 <h1>About Me</h1>
                 <p>
-                    Hey! 👋🏿 My name is @Anonymous. I'm a Frontend Developer, Web Developer, and Designer. With over 2+ years of programming experience, I find joy in coding and creating innovative web solutions. I'm passionate about designing visually appealing and user-friendly websites.
+                    Hey! 👋🏿 My name is @Anonymous. I'm a Frontend Developer, Web Developer, and Designer. With over one years of programming experience, I find joy in coding and creating innovative web solutions. I'm passionate about designing visually appealing and user-friendly websites.
                 </p>
             </section>
             
@@ -63,7 +63,7 @@
                 <div class="box">
                     <article class="discord">
                         <div class="profil">
-                            <img id="avatar1" src="" alt="avatar">
+                            <img id="avatar1" src="https://lanyard.rest/535117705854844940.jpg" alt="avatar">
                             <div class="info">
                                 <h3 id="globalName"></h3>
                                 <h4 id="username"></h4>
@@ -100,8 +100,8 @@
             <footer class="footer">
                 <div class="footer-about">
                     <a target="_blank" href=""><i class="fa-brands fa-twitter"></i></a>
-                        <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i></a>
-                        <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i></a>
+                    <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i></a>
+                    <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <a class="copyright">© lil Wolf 2022</a>
             </footer>
