--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
                                         <h4 id="end">1:00</h4>
                                     </span>
                                 </div>
+                                <hr>
                                 <div class="social"> <!--grid-->
-                                    <a target="_blank" href=""><i class="fa-brands fa-twitter"></i> Twitter</a>
-                                    <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i> Discord</a>
-                                    <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i> Github</a>
-                                    <a target="_blank" href="https://open.spotify.com/user/aeprcnfxte6k7w5o418i29se1"><i class="fa-brands fa-spotify"></i> Spotify</a>
+                                    <a target="_blank" href=""><i class="fa-brands fa-twitter"></i> lilWolf</a>
+                                    <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i> lilwolf_</a>
+                                    <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i> lilWolf011</a>
+                                    <a target="_blank" href="https://open.spotify.com/user/aeprcnfxte6k7w5o418i29se1"><i class="fa-brands fa-spotify"></i> $lil Wolf</a>
                                 </div>
                             </section>
                             <!--
