--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                         <img class="banner" src="https://media.tenor.com/7mSj4FRRZP0AAAAd/kiyotaka-ayanokoji-eyes.gif" alt="">
                         <div class="in">
 
-                            <div class="icons">
-                                <section>
+                            <section class="icons">
+                                <div>
                                     <img src="https://discordresources.com/img/hse.png" alt="">
-                                    <img src="https://discordresources.com/img/boost.png" alt="">
                                     <img src="https://discordresources.com/img/ad.png" alt="">
                                     <img src="https://discordresources.com/img/earlydev.png" alt="">
+                                    <img src="https://discordresources.com/img/boost.png" alt="">
                                     <img src="https://discordresources.com/img/nitro.png" alt="">
-                                </section>
-                            </div>
+                                </div>
+                            </section>
 
                             <div class="profile">
                                 <span class="avatar">
@@ -103,10 +103,28 @@
                                 </div>
                                 <hr>
                                 <div class="social"> <!--grid-->
-                                    <a target="_blank" href=""><i class="fa-brands fa-twitter"></i> lilWolf</a>
-                                    <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-brands fa-discord"></i> lilwolf_</a>
-                                    <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-brands fa-github"></i> lilWolf011</a>
-                                    <a target="_blank" href="https://open.spotify.com/user/aeprcnfxte6k7w5o418i29se1"><i class="fa-brands fa-spotify"></i> $lil Wolf</a>
+                                    
+                                    <span>
+                                        <i class="fa-brands fa-twitter"></i>
+                                        Twitter
+                                        <a target="_blank" href=""><i class="fa-solid fa-up-right-from-square" style="color: #ffffff;"></i></a>
+                                    </span>
+                                    <span>
+                                        <i class="fa-brands fa-discord"></i>
+                                        lilWolf_
+                                        <a target="_blank" href="https://discord.com/users/535117705854844940"><i class="fa-solid fa-up-right-from-square" style="color: #ffffff;"></i></a>
+                                    </span>
+                                    <span>
+                                        <i class="fa-brands fa-github"></i>
+                                        lilWolf011
+                                        <a target="_blank" href="https://github.com/lilWolf011"><i class="fa-solid fa-up-right-from-square" style="color: #ffffff;"></i></a>
+                                    </span>
+                                    <span>
+                                        <i class="fa-brands fa-spotify"></i>
+                                        $lil Wolf
+                                        <a target="_blank" href="https://open.spotify.com/user/aeprcnfxte6k7w5o418i29se1"><i class="fa-solid fa-up-right-from-square" style="color: #ffffff;"></i></a>
+                                    </span>
+                                    
                                 </div>
                             </section>
                             <!--
