--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                     </span>
                                     <span id="progressbar">
                                         <h4 id="start">0:00</h4>
-                                        <progress id="progress" value="" max="100"></progress>
+                                        <progress id="progress" value="0" max="100"></progress>
                                         <h4 id="end">1:00</h4>
                                     </span>
                                 </div>
